# market-data-high-frequency-infrastructure

./: CMakeLists.txt  README.md
bench/: latency.cpp  micro_parse.cpp  throughput.cpp
cmake/toolchains/: clang-libc++.cmake
config/: mdp.toml
config/feeds/: feed_fema.toml  feed_itch.toml
include/mdp/: core.hpp  dispatch.hpp  metrics.hpp  models.hpp  net.hpp  parse.hpp  pinning.hpp  pool.hpp  ring.hpp  time.hpp
src/: core.cpp  dispatch.cpp  main.cpp  metrics.cpp  net_dpdk.cpp  net_sock.cpp  parse_fema.cpp  parse_itch.cpp  time.cpp
tests/: fuzz_parse.cpp  unit_parse.cpp  unit_pool.cpp  unit_ring.cpp
tools/: gen_synth_feed.cpp  pcap_to_ring.cpp  replayer.cpp
